Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Maxus eDeliver3: Web interface page added for charging and cell metrics
- MG ZS EV: Add new features page to select car's BMS firmware release to adjust SOC display.
- New vehicle: Maxus eDeliver 3 via OBD-II Port (MED3)
  https://docs.openvehicles.com/en/latest/components/vehicle_maxus_edeliver3/docs/index.html
- Vehicle: emit standard events on changing v.c.timermode
  New events:
    vehicle.charge.timermode.off   -- Vehicle charge timer mode has been switched off
    vehicle.charge.timermode.on    -- Vehicle charge timer mode has been switched on
- VW e-Up/OBD: detect charge timer mode
  New metrics:
    xvu.c.limit.soc.max            -- Charge schedule maximum SOC [%]
    xvu.c.limit.soc.min            -- Charge schedule minimum SOC [%]
    xvu.c.timermode.def            -- Charge timer defined & default [bool]
- VW e-Up/OBD: optional BMS auto statistics reset between driving & charging
  New config:
    [xvu] bms.autoreset            -- yes = enable statistics reset, default no
- New vehicle: Hyundai Ioniq vFL (HIONVFL)
  https://docs.openvehicles.com/en/latest/components/vehicle_hyundai_ioniqvfl/docs/index.html
- Webserver: support TLS (https, wss) using self-signed certificates

2021-03-05 MB  3.2.016  OTA release
- VW e-Up: CCS (DC) charge detection & data
  New metrics:
    xvu.c.ccs.u             -- CCS charger supplied voltage [V]
    xvu.c.ccs.i             -- CCS Charger supplied current [A]
    xvu.c.ccs.p             -- CCS Charger supplied power [kW]
- VW e-Up: replaced MFD range based CAC/SOH by charge coulomb count based
  Removed metrics:
    xvu.b.cap.range
    xvu.b.cap.chg.ah.norm
    xvu.b.cap.chg.ah.norm
    xvu.b.cap.chg.kwh.norm
    xvu.b.cap.chg.kwh.abs
  New metrics:
    xvu.b.energy.range      -- MFD range estimation energy [kWh]
    xvu.b.cap.kwh.range     -- … usable battery capacity derived [kWh]