@@ -1,6 +1,7 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Maxus eDeliver3: cell volts and temps added to metrics and polling update.
 - Maxus eDeliver3: Web interface page added for charging and cell metrics
 - MG ZS EV: Add new features page to select car's BMS firmware release to adjust SOC display.
 - New vehicle: Maxus eDeliver 3 via OBD-II Port (MED3)
